--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "scripts": {
-    "lint": "eslint . --ext .ts",
+    "lint": "prettier --check \"src/**/*.{ts,js}\"",
     "start": "snowpack dev",
     "build": "snowpack build",
     "test": "echo \"This template does not include a test runner by default.\" && exit 1",
-    "format": "prettier --write \"src/**/*.{ts,js}\"",
-    "lint": "prettier --check \"src/**/*.{ts,js}\""
+    "format": "prettier --write \"src/**/*.{ts,js}\""
   },
   "dependencies": {
     "@types/luxon": "^3.0.0",
@@ -16,6 +15,7 @@
     "@snowpack/plugin-typescript": "^1.2.1",
     "@types/canvas-confetti": "^1.0.0",
     "@types/snowpack-env": "^2.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
     "prettier": "^2.2.1",
     "snowpack": "^3.3.7",
     "typescript": "^4.2.4"
