--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/canvas-confetti": "^1.0.0",
     "@types/snowpack-env": "^2.3.3",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
+    "eslint": "^8.21.0",
     "prettier": "^2.2.1",
     "snowpack": "^3.3.7",
     "typescript": "^4.2.4"
