--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,5 +9,6 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended"
-  ]
+  ],
+  "ignorePatterns":["snowpack.config.mjs"]
 }
